--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,4 @@
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -27,8 +28,7 @@
     --chart-3: 197 37% 24%;
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
-    --radius: 0.5rem
-  }
+    --radius: 0.5rem}
   .dark {
     --background: 0 0% 3.9%;
     --foreground: 0 0% 98%;
@@ -65,3 +65,35 @@
   }
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
+::-webkit-scrollbar {
+  width: 6px; /* Width of the scrollbar */
+  height: 8px; /* Height of the scrollbar for horizontal scroll */
+
+
+}
+::-webkit-scrollbar-track {
+  background: #ccc5c5;
+  border-radius: 10px; /* Rounded corners for the t
+
+  rack */
+
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #545252; /* Color of the scroll thumb */
+  border-radius: 4px; /* Rounded corners for the thumb */
+  border: 1px solid transparent; /* Optional border */
+
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #949191; /* Color on hover */
+}
+
+.hide-scrollbar {
+  scrollbar-width: none;
+}
